policies/components/other/require-storageclass/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-storageclass
policies:
  - require-storageclass.yaml
resources:
  - resources.yaml
variables: ../../values.yaml
results:
  - policy: ibm-require-storageclass
    rule: pvc-storageclass
    resources:
      - goodpvc
    kind: PersistentVolumeClaim
    result: pass
  - policy: ibm-require-storageclass
    rule: pvc-storageclass
    resources:
      - badpvc
    kind: PersistentVolumeClaim
    result: fail
  - policy: ibm-require-storageclass
    rule: ss-storageclass
    resources:
      - goodss
    kind: StatefulSet
    result: pass
  - policy: ibm-require-storageclass
    rule: ss-storageclass
    resources:
      - badss
    kind: StatefulSet
    result: fail
